fixed responsiveness issues on smaller screens

--- a/styles/all-posts.css
+++ b/styles/all-posts.css
@@ -143,7 +143,7 @@ input:focus {
 }
 
 .post-thumbnail {
-  width: 24rem;
+  width: 20vw;
   background-size: cover;
   background-position: center;
   border-radius: 0.5rem 0 0 0.5rem;
@@ -384,18 +384,24 @@ footer {
 
 @media (max-width: 1024px) {
   .hero-content {
-    padding: 0 2rem;
+    padding-bottom: 7rem;
   }
   .plans-container {
     flex-wrap: wrap;
     justify-content: center;
   }
+  .post-card {
+    flex-direction: column;
+  }
+  .post-thumbnail {
+    width: 100%;
+    height: 30vh;
+    border-radius: 0.5rem 0.5rem 0 0;
+  }
 }
 
 @media (max-width: 768px) {
   .nav-bar {
-    flex-direction: column;
-    align-items: flex-start;
     padding: 1.5rem 2rem;
   }
 
@@ -438,16 +444,6 @@ footer {
     padding: 2rem 1rem;
   }
 
-  .post-card {
-    flex-direction: column;
-  }
-
-  .post-thumbnail {
-    width: 100%;
-    height: 12rem;
-    border-radius: 0.5rem 0.5rem 0 0;
-  }
-
   .sidebar {
     border-left: none;
     border-top: 0.2rem solid #000;
@@ -468,6 +464,10 @@ footer {
     width: 80%;
     max-width: 20rem;
     align-self: center;
+  }
+
+  .post-thumbnail {
+    height: 25vh;
   }
 
   .about-us-container {
@@ -540,17 +540,18 @@ footer {
 }
 
 @media (max-width: 480px) {
-  #hero-title {
-    font-size: 2.2rem;
-  }
-  #hero-description {
-    font-size: 1rem;
-  }
   #about-us-title {
     font-size: 2.2rem;
   }
   #wcu-title,
   #hdiw-title {
     font-size: 2.4rem;
+  }
+  .text-field {
+    min-width: 0;
+    width: 90%;
+  }
+  .post-thumbnail {
+    height: 35vh;
   }
 }
