--- a/styles/single.css
+++ b/styles/single.css
@@ -317,18 +317,26 @@ footer {
 
 @media (max-width: 1024px) {
   .hero-content {
-    padding: 0 2rem;
+    padding-bottom: 7rem;
   }
   .plans-container {
     flex-wrap: wrap;
     justify-content: center;
   }
+  #thumbnail-img {
+    width: 100%;
+    max-height: 25vh;
+  }
+  #hero-description {
+    width: 100%;
+  }
+  .hero-text {
+    width: 90%;
+  }
 }
 
 @media (max-width: 768px) {
   .nav-bar {
-    flex-direction: column;
-    align-items: flex-start;
     padding: 1.5rem 2rem;
   }
 
@@ -380,6 +388,7 @@ footer {
   .hero-content {
     flex-direction: column;
     text-align: center;
+    padding: 0 1rem 5rem;
     gap: 2rem;
   }
 
@@ -463,17 +472,11 @@ footer {
 }
 
 @media (max-width: 480px) {
-  #hero-title {
-    font-size: 2.2rem;
+  #thumbnail-img {
+    max-height: 30vh;
   }
-  #hero-description {
-    font-size: 1rem;
-  }
-  #about-us-title {
-    font-size: 2.2rem;
-  }
-  #wcu-title,
-  #hdiw-title {
-    font-size: 2.4rem;
+  .text-field {
+    min-width: 0;
+    width: 90%;
   }
 }
